fix free knitting patterns carousel overflow
Former-commit-id: 32e0b55d672341b3df9e963b3c3b4a13c405744a [formerly 6da0c99863493a0554218b0bdf71a74c5b36fed4]
Former-commit-id: cbead79e8f27f20e97d182f927a288c17d13ba5a

--- a/frontend/app/assets/stylesheets/_static-signups.scss
+++ b/frontend/app/assets/stylesheets/_static-signups.scss
@@ -296,6 +296,7 @@
     /** Carousel **/
     .row-carousel {
       padding-bottom: 30px;
+      overflow: hidden;
       .owl-carousel {
         .owl-item img {
           width: initial !important;
